study: 集合操作学习
