# hookfuncMedia/docs/swagger.json
@@ -93,13 +93,6 @@
                         "schema": {
                             "$ref": "#/definitions/v1.CancelOrderRequest"
                         }
-                    },
-                    {
-                        "type": "string",
-                        "description": "Authorization token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
                     }
                 ],
                 "responses": {
@@ -124,6 +117,15 @@
                     "订单"
                 ],
                 "summary": "历史订单",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -474,6 +476,10 @@
                 },
                 "total": {
                     "description": "订单金额",
+                    "type": "integer"
+                },
+                "userId": {
+                    "description": "用户ID",
                     "type": "integer"
                 },
                 "userName": {
